Update healthassistantvision.json and requirements.txt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,164 +1,19 @@
-aiohttp
-aiohttp-retry
-aioitertools
-aioredis
-alembic
-asyncpg
-altair
-amqp
-anyio
-bcrypt
-beautifulsoup4
-billiard
-black
-blinker
-botocore
-cachetools
-celery
-certifi
-cffi
-chardet
-charset-normalizer
-click
-cloudpickle
-cryptography
-datasets
-diskcache
-distro
-dnspython
-ecdsa
-email_validator
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-fastapi
-fastapi-cli
-fastapi-limiter
-filelock
-flask
-fsspec
-gitpython
-google-api-core
-google-auth
-google-cloud-vision
-googleapis-common-protos
-gotrue
-greenlet
-grpcio
-grpcio-status
-gunicorn
-h11
-h2
-httpcore
-httptools
-httpx
-huggingface-hub
-idna
-jinja2
-jiter
-jmespath
-joblib
-jsonpatch
-jsonpointer
-jsonschema
-jwcrypto
-kombu
-linkify-it-py
-llama_cpp_python
-lxml
-mako
-markdown
-markdown-it-py
-markupsafe
-motor
-msgpack
-multidict
-numpy
-openai
-opencv-python
-openpyxl
-orjson
-packaging
-pandas
-passlib
-peft
-pillow
-pkce
-plotly
-postgrest
-protobuf
-psutil
-psycopg2
-psycopg2-binary
-pyarrow
-pycparser
-pydantic
-pydantic-extra-types
-pydantic-settings
-pydantic_core
-pyjwt
-pymongo
-pyopenssl
-python-dateutil
-python-dotenv
-python-http-client
-python-jose
-python-json-logger
-python-jwt
-python-multipart
-python-slugify
-pyyaml
-rapidfuzz
-realtime
-redis
-regex
-reportlab
-requests
-rfc3339-validator
-rfc3986-validator
-rich
-rsa
-s3fs
-safetensors
-scipy
-seaborn
-sendgrid
-sentencepiece
-setuptools
-shellingham
-six
-sniffio
-soupsieve
-spacy
-sqlalchemy
-starlette
-storage3
-streamlit
-supabase
-supafunc
-tenacity
-text-unidecode
-textblob
-tokenizers
-toml
-tomli
-tomlkit
-torch
-torchaudio
-torchvision
-tqdm
-transformers
-twilio
-typer
-typing_extensions
-tzdata
-ujson
-unidecode
-urllib3
-uvicorn
-uvloop
-vine
-watchfiles
-websocket-client
-websockets
-werkzeug
-wheel
-yarl
+asyncpg==0.30.0
+celery==5.5.0
+fastapi==0.115.12
+httpx==0.28.1
+numpy==2.2.4
+openai==1.70.0
+opencv_python==4.11.0.86
+Pillow==11.1.0
+pydantic==2.11.2
+PyJWT==2.10.1
+PyJWT==2.10.1
+python-dotenv==1.1.0
+python_bcrypt==0.3.2
+python_jose==3.4.0
+pytz==2024.1
+reportlab==4.3.1
+sendgrid==6.11.0
+twilio==9.5.1
+uvicorn==0.34.0
