--- a/healthassistant-frontend/.env.production
+++ b/healthassistant-frontend/.env.production
@@ -1,1 +1,2 @@
-VITE_API_URL=https://your-api-url.com
+VITE_API_URL=http://localhost:8000
+VITE_API_URL=https://5cef-2a02-3100-1aea-4500-9ca2-5214-67bd-f319.ngrok-free.app
