Force pydantic[email] installation

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,43 +1,162 @@
-# FastAPI and ASGI server
-fastapi
-uvicorn[standard]
-
-# OpenAI GPT-4o support
-openai==1.14.3
-
-# Google Vision API for image analysis
-google-cloud-vision
-
-# Image processing
-pillow
-opencv-python-headless
-numpy
-
-# Async HTTP requests (optional, useful for future API integrations)
-httpx
-
-# Email and notifications
-sendgrid
-python-dotenv
-
-# Authentication and security
-bcrypt
-python-jose[cryptography]
-passlib[bcrypt]
-itsdangerous
-
-# Database
-sqlalchemy
-asyncpg
+aiohttp
+aiohttp-retry
+aioitertools
+aioredis
 alembic
-
-# Background tasks and scheduling
+altair
+amqp
+anyio
+bcrypt
+beautifulsoup4
+billiard
+black
+blinker
+botocore
+cachetools
 celery
-redis
-
-# PDF generation
-reportlab
-
-# Utility
+certifi
+cffi
+chardet
+charset-normalizer
+click
+cloudpickle
+cryptography
+datasets
+diskcache
+distro
+dnspython
+ecdsa
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+fastapi
+fastapi-cli
+fastapi-limiter
+filelock
+flask
+fsspec
+gitpython
+google-api-core
+google-auth
+google-cloud-vision
+googleapis-common-protos
+gotrue
+greenlet
+grpcio
+grpcio-status
+gunicorn
+h11
+h2
+httpcore
+httptools
+httpx
+huggingface-hub
+idna
+jinja2
+jiter
+jmespath
+joblib
+jsonpatch
+jsonpointer
+jsonschema
+jwcrypto
+kombu
+linkify-it-py
+llama_cpp_python
+lxml
+mako
+markdown
+markdown-it-py
+markupsafe
+motor
+msgpack
+multidict
+numpy
+openai
+opencv-python
+openpyxl
+orjson
+packaging
+pandas
+passlib
+peft
+pillow
+pkce
+plotly
+postgrest
+protobuf
+psutil
+psycopg2
+psycopg2-binary
+pyarrow
+pycparser
+pydantic[email]
+pydantic-extra-types
+pydantic-settings
+pydantic_core
+pyjwt
+pymongo
+pyopenssl
+python-dateutil
+python-dotenv
+python-http-client
+python-jose
+python-json-logger
+python-jwt
 python-multipart
-uuid
+python-slugify
+pyyaml
+rapidfuzz
+realtime
+redis
+regex
+reportlab
+requests
+rfc3339-validator
+rfc3986-validator
+rich
+rsa
+s3fs
+safetensors
+scipy
+seaborn
+sendgrid
+sentencepiece
+setuptools
+shellingham
+six
+sniffio
+soupsieve
+spacy
+sqlalchemy
+starlette
+storage3
+streamlit
+supabase
+supafunc
+tenacity
+text-unidecode
+textblob
+tokenizers
+toml
+tomli
+tomlkit
+torch
+torchaudio
+torchvision
+tqdm
+transformers
+twilio
+typer
+typing_extensions
+tzdata
+ujson
+unidecode
+urllib3
+uvicorn
+uvloop
+vine
+watchfiles
+websocket-client
+websockets
+werkzeug
+wheel
+yarl
